fix: backend name

--- a/apps/frontend/wrangler.toml
+++ b/apps/frontend/wrangler.toml
@@ -1,3 +1,3 @@
 services = [
-    { binding = "BACKEND", service = "backend" }
+    { binding = "BACKEND", service = "remix-hono-turbo-example-backend" }
 ]
