--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,8 +19,12 @@
     "@repo/api": "workspace:^",
     "isbot": "^4.1.0",
     "miniflare": "^3.20240404.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "19.0.0-canary-96c584661-20240412",
+    "react-dom": "19.0.0-canary-96c584661-20240412"
+  },
+  "overrides": {
+    "react": "19.0.0-canary-96c584661-20240412",
+    "react-dom": "19.0.0-canary-96c584661-20240412"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240405.0",
