fix: set node ver in wrangler toml

--- a/apps/frontend/wrangler.toml
+++ b/apps/frontend/wrangler.toml
@@ -1,6 +1,9 @@
 name = "remix-hono-turbo-frontend"
 pages_build_output_dir = "build/client"
 
+[vars]
+NODE_VERSION = "20"
+
 [[services]]
 binding = "BACKEND"
 service = "remix-hono-turbo-backend"
