--- a/apps/frontend/wrangler.toml
+++ b/apps/frontend/wrangler.toml
@@ -4,6 +4,6 @@ pages_build_output_dir = "build/client"
 [vars]
 NODE_VERSION = "20"
 
-[[services]]
-binding = "BACKEND"
-service = "remix-hono-turbo-backend"
+services = [
+    { binding = "BACKEND", service = "remix-hono-turbo-backend" },
+]
