--- a/apps/web/wrangler.toml
+++ b/apps/web/wrangler.toml
@@ -2,9 +2,9 @@ name = "remix-hono-turbo-web"
 pages_build_output_dir = ".vercel/output/static"
 compatibility_date = "2024-04-16"
 compatibility_flags = [ "nodejs_compat" ]
-# services = [
-#     { binding = "BACKEND", service = "remix-hono-turbo-backend" },
-# ]
+services = [
+    { binding = "BACKEND", service = "remix-hono-turbo-backend", environment = "production" },
+]
 
 [vars]
 NODE_VERSION = "20"
