--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@repo/api": "workspace:^",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18"
