fix: use normal toml, use smart placement

--- a/apps/web/wrangler.toml
+++ b/apps/web/wrangler.toml
@@ -6,6 +6,9 @@ services = [
     { binding = "BACKEND", service = "remix-hono-turbo-backend", environment = "production" },
 ]
 
+[placement]
+mode = "smart"
+
 [vars]
 NODE_VERSION = "20"
 API_MODE = "production"
