--- a/apps/frontend/wrangler.toml
+++ b/apps/frontend/wrangler.toml
@@ -5,5 +5,8 @@ services = [
     { binding = "BACKEND", service = "remix-hono-turbo-backend", environment = "production" },
 ]
 
+[placement]
+mode = "smart"
+
 [vars]
 NODE_VERSION = "20"
