--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,6 +5,8 @@
     "./twrangler": "./src/twrangler.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.6.0",
+    "drizzle-orm": "^0.30.8",
     "hono": "^4.2.4"
   },
   "peerDependencies": {
@@ -16,6 +18,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240403.0",
     "@repo/typescript-config": "workspace:*",
+    "drizzle-kit": "^0.20.14",
     "twrangler": "^0.0.7",
     "wrangler": "^3.47.0"
   }
