--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,14 +17,19 @@
     "@remix-run/cloudflare-pages": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@repo/api": "workspace:^",
+    "@tailwindcss/vite": "4.0.0-alpha.14",
+    "clsx": "^2.1.0",
     "isbot": "^4.1.0",
     "miniflare": "^3.20240405.2",
-    "react": "19.0.0-canary-96c584661-20240412",
-    "react-dom": "19.0.0-canary-96c584661-20240412"
+    "react": "19.0.0-canary-36e62c603-20240418",
+    "react-dom": "19.0.0-canary-36e62c603-20240418",
+    "tailwind-merge": "^2.2.2",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "4.0.0-alpha.14"
   },
   "overrides": {
-    "react": "19.0.0-canary-96c584661-20240412",
-    "react-dom": "19.0.0-canary-96c584661-20240412"
+    "react": "19.0.0-canary-36e62c603-20240418",
+    "react-dom": "19.0.0-canary-36e62c603-20240418"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240405.0",
@@ -43,6 +48,6 @@
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "^3.51.0"
+    "wrangler": "^3.51.2"
   }
 }
