--- a/apps/frontend/wrangler.toml
+++ b/apps/frontend/wrangler.toml
@@ -1,6 +1,7 @@
 name = "remix-hono-turbo-frontend"
 pages_build_output_dir = "./build/client"
 compatibility_date = "2024-04-16"
+compatibility_flags = [ "nodejs_compat" ]
 services = [
     { binding = "BACKEND", service = "remix-hono-turbo-backend", environment = "production" },
 ]
