--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -26,5 +26,8 @@
     "drizzle-kit": "^0.20.14",
     "twrangler": "^0.0.7",
     "wrangler": "^3.47.0"
+  },
+  "scripts": {
+    "db:migrate": "drizzle-kit generate:sqlite"
   }
 }
