--- a/apps/backend/wrangler.toml
+++ b/apps/backend/wrangler.toml
@@ -2,6 +2,7 @@ name = "remix-hono-turbo-backend"
 main = "src/index.ts"
 compatibility_date = "2024-04-03"
 node_compat = true
+upload_source_maps = true
 
 [placement]
 mode = "smart"
