--- a/apps/frontend/wrangler.toml
+++ b/apps/frontend/wrangler.toml
@@ -5,6 +5,7 @@ compatibility_flags = [ "nodejs_compat" ]
 services = [
     { binding = "BACKEND", service = "remix-hono-turbo-backend", environment = "production" },
 ]
+upload_source_maps = true
 
 [placement]
 mode = "smart"
