--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
     "@remix-run/cloudflare-pages": "^2.9.1",
     "@remix-run/react": "^2.9.1",
     "@repo/api": "workspace:^",
+    "@repo/ui": "workspace:^",
     "@tailwindcss/vite": "4.0.0-alpha.14",
     "clsx": "^2.1.1",
     "isbot": "^4.1.0",
@@ -35,17 +36,17 @@
     "@cloudflare/workers-types": "^4.20240423.0",
     "@double-great/stylelint-a11y": "^3.0.2",
     "@remix-run/dev": "^2.9.1",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@virtual-live-lab/stylelint-config": "^1.3.0",
+    "@virtual-live-lab/stylelint-config": "^1.3.1",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "node-fetch": "^3.3.2",
     "stylelint": "^16.4.0",
     "stylelint-config-recess-order": "^5.0.1",
