--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@virtual-live-lab/eslint-config": "^1.3.0",
-    "@virtual-live-lab/tsconfig": "^1.2.0",
+    "@virtual-live-lab/eslint-config": "^1.3.1",
+    "@virtual-live-lab/tsconfig": "^1.2.2",
     "prettier": "^3.2.5",
-    "turbo": "latest",
+    "turbo": "^1.13.3",
     "typescript": "^5.4.5"
   },
   "packageManager": "pnpm@9.0.0",
