--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,7 +3,10 @@
   "scripts": {
     "predev": "twrangler build",
     "dev": "twrangler build && wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
+    "deploy": "wrangler deploy --minify src/index.ts",
+    "db:migrate": "drizzle-kit generate:sqlite",
+    "db:push": "wrangler d1 migrations apply remix-hono-turbo-example --local",
+    "db:push-remote": "wrangler d1 migrations apply remix-hono-turbo-example --remote"
   },
   "dependencies": {
     "@repo/api": "workspace:^",
@@ -11,6 +14,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240423.0",
+    "drizzle-kit": "^0.20.17",
     "twrangler": "^0.0.7",
     "wrangler": "^3.53.0"
   }
