--- a/apps/backend/wrangler.toml
+++ b/apps/backend/wrangler.toml
@@ -1,7 +1,7 @@
 name = "remix-hono-turbo-backend"
 main = "src/index.ts"
 compatibility_date = "2024-04-03"
-node_compat = true
+compatibility_flags = ["nodejs_compat"]
 upload_source_maps = true
 
 [placement]
