--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
     "@remix-run/cloudflare-pages": "^2.9.1",
     "@remix-run/react": "^2.9.1",
     "@repo/api": "workspace:^",
+    "@repo/module": "workspace:^",
     "@repo/ui": "workspace:^",
     "@tailwindcss/vite": "4.0.0-alpha.14",
     "clsx": "^2.1.1",
