--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -14,5 +14,5 @@
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
     "**/.client/**/*.tsx"
-, "../../packages/ui/src/elements/Button.tsx"  ]
+, "../../packages/ui/src/elements/Button.tsx", "app/sessions.server.ts"  ]
 }
