--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "@repo/api",
+  "name": "@repo/module",
   "exports": {
-    "./twrangler": "./src/twrangler.ts",
-    "./client": "./src/client.ts",
-    "./server": "./src/server.ts",
-    "./schema/zod": "./src/db/schemas/zod.ts"
+    ".": "./src/index.ts",
+    "./schema": "./src/schema.ts",
+    "./usecase/*": "./src/usecase/*.ts",
+    "./zod": "./src/zod.ts"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
     "@libsql/client": "^0.6.0",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "^0.30.9",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.2.9",
     "zod": "^3.23.5"
   },
   "peerDependencies": {
     "@cloudflare/workers-types": "^4.20240403.0",
-    "@repo/module": "workspace:^",
     "hono": "^4.2.4",
     "twrangler": "^0.0.7",
     "wrangler": "^3.47.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240423.0",
-    "drizzle-kit": "^0.20.17",
+    "@virtual-live-lab/eslint-config": "^2.0.1",
+    "@virtual-live-lab/tsconfig": "^2.0.1",
+    "eslint": "^9.1.1",
+    "ts-results": "^3.3.0",
     "twrangler": "^0.0.7",
+    "typescript": "^5.4.5",
     "wrangler": "^3.53.0"
-  },
-  "scripts": {
-    "db:migrate": "drizzle-kit generate:sqlite"
   }
 }
