--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@repo/api": "workspace:^",
+    "@repo/ui": "workspace:^",
+    "clsx": "^2.1.1",
     "next": "14.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.2",
