--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,25 +13,35 @@
     "typegen": "wrangler types"
   },
   "dependencies": {
+    "@conform-to/react": "^1.1.3",
+    "@conform-to/zod": "^1.1.3",
+    "@mantine/charts": "^7.8.1",
+    "@mantine/core": "^7.8.1",
+    "@mantine/dates": "^7.8.1",
+    "@mantine/form": "^7.8.1",
+    "@mantine/hooks": "^7.8.1",
+    "@mantine/notifications": "^7.8.1",
     "@remix-run/cloudflare": "^2.9.1",
     "@remix-run/cloudflare-pages": "^2.9.1",
     "@remix-run/react": "^2.9.1",
     "@repo/api": "workspace:^",
     "@repo/module": "workspace:^",
     "@repo/ui": "workspace:^",
-    "@tailwindcss/vite": "4.0.0-alpha.14",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "isbot": "^4.4.0",
+    "lucide-react": "^0.376.0",
     "miniflare": "^3.20240419.0",
-    "react": "19.0.0-canary-36e62c603-20240418",
-    "react-dom": "19.0.0-canary-36e62c603-20240418",
+    "react": "19.0.0-beta-4508873393-20240430",
+    "react-dom": "19.0.0-beta-4508873393-20240430",
+    "recharts": "2",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss": "4.0.0-alpha.14"
+    "zod": "^3.23.5"
   },
   "overrides": {
-    "react": "19.0.0-canary-36e62c603-20240418",
-    "react-dom": "19.0.0-canary-36e62c603-20240418"
+    "react": "19.0.0-beta-4508873393-20240430",
+    "react-dom": "19.0.0-beta-4508873393-20240430"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240423.0",
@@ -41,7 +51,10 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@virtual-live-lab/eslint-config": "^2.0.1",
     "@virtual-live-lab/stylelint-config": "^1.3.1",
+    "@virtual-live-lab/tsconfig": "^2.0.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
@@ -49,6 +62,9 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "node-fetch": "^3.3.2",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
     "stylelint": "^16.4.0",
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-recommended": "^14.0.0",
@@ -57,6 +73,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.8.0",
     "stylelint-value-no-unknown-custom-properties": "^6.0.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
     "vite-tsconfig-paths": "^4.3.2",
