--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,10 +15,7 @@
   "dependencies": {
     "@conform-to/react": "^1.1.3",
     "@conform-to/zod": "^1.1.3",
-    "@mantine/charts": "^7.8.1",
     "@mantine/core": "^7.8.1",
-    "@mantine/dates": "^7.8.1",
-    "@mantine/form": "^7.8.1",
     "@mantine/hooks": "^7.8.1",
     "@mantine/notifications": "^7.8.1",
     "@remix-run/cloudflare": "^2.9.1",
@@ -28,13 +25,11 @@
     "@repo/module": "workspace:^",
     "@repo/ui": "workspace:^",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
     "isbot": "^4.4.0",
-    "lucide-react": "^0.376.0",
     "miniflare": "^3.20240419.0",
     "react": "19.0.0-beta-4508873393-20240430",
     "react-dom": "19.0.0-beta-4508873393-20240430",
-    "recharts": "2",
+    "react-feather": "^2.0.10",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "zod": "^3.23.5"
@@ -49,18 +44,11 @@
     "@remix-run/dev": "^2.9.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "@virtual-live-lab/eslint-config": "^2.0.1",
     "@virtual-live-lab/stylelint-config": "^1.3.1",
     "@virtual-live-lab/tsconfig": "^2.0.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
     "node-fetch": "^3.3.2",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.15.0",
