--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,6 +18,7 @@
     "@mantine/core": "^7.8.1",
     "@mantine/hooks": "^7.8.1",
     "@mantine/notifications": "^7.8.1",
+    "@mantine/nprogress": "^7.8.1",
     "@remix-run/cloudflare": "^2.9.1",
     "@remix-run/cloudflare-pages": "^2.9.1",
     "@remix-run/react": "^2.9.1",
