--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
     "@libsql/client": "^0.6.0",
+    "bcryptjs": "^2.4.3",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.3.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240502.0",
+    "@types/bcryptjs": "^2.4.6",
     "@virtual-live-lab/eslint-config": "^2.0.1",
     "@virtual-live-lab/tsconfig": "^2.0.1",
     "eslint": "^9.1.1",
