--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,33 +1,24 @@
 {
   "name": "@repo/api",
+  "private": true,
   "exports": {
-    "./twrangler": "./src/twrangler.ts",
     "./client": "./src/client.ts",
-    "./server": "./src/server.ts",
-    "./schema/zod": "./src/db/schemas/zod.ts"
+    "./server": "./src/server.ts"
+  },
+  "scripts": {
+    "lint": "eslint ."
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
-    "@libsql/client": "^0.6.0",
-    "drizzle-orm": "^0.30.10",
-    "drizzle-zod": "^0.5.1",
-    "hono": "^4.3.0",
-    "zod": "^3.23.6"
-  },
-  "peerDependencies": {
-    "@cloudflare/workers-types": "^4.20240403.0",
     "@repo/module": "workspace:^",
-    "hono": "^4.2.4",
-    "twrangler": "^0.0.7",
-    "wrangler": "^3.47.0"
+    "hono": "^4.3.1",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240502.0",
-    "drizzle-kit": "^0.20.17",
-    "twrangler": "^0.0.7",
-    "wrangler": "^3.53.1"
-  },
-  "scripts": {
-    "db:migrate": "drizzle-kit generate:sqlite"
+    "@virtual-live-lab/eslint-config": "^2.0.1",
+    "@virtual-live-lab/tsconfig": "^2.0.1",
+    "eslint": "^8.57.0",
+    "typescript": "^5.4.5"
   }
 }
