--- a/apps/backend/wrangler.toml
+++ b/apps/backend/wrangler.toml
@@ -1,4 +1,4 @@
-name = "remix-hono-turbo-backend"
+name = "burntodo-backend"
 main = "src/index.ts"
 compatibility_date = "2024-04-03"
 compatibility_flags = ["nodejs_compat"]
@@ -11,4 +11,3 @@ mode = "smart"
 binding = "DB" # i.e. available in your Worker on env.DB
 database_name = "remix-hono-turbo-example"
 database_id = "2b19135e-ebbd-4723-8bcf-74be224781d9"
-
