--- a/apps/web/wrangler.toml
+++ b/apps/web/wrangler.toml
@@ -3,7 +3,7 @@ pages_build_output_dir = ".vercel/output/static"
 compatibility_date = "2024-04-16"
 compatibility_flags = [ "nodejs_compat" ]
 services = [
-    { binding = "BACKEND", service = "remix-hono-turbo-backend", environment = "production" },
+    { binding = "BACKEND", service = "burntodo-backend", environment = "production" },
 ]
 
 [placement]
