fix: invalid password salt

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "scripts": {
-    "dev": "wrangler dev src/index.ts",
+    "dev": "wrangler dev src/index.ts --env dev",
     "deploy": "wrangler deploy --minify src/index.ts",
     "db:migrate": "drizzle-kit generate:sqlite",
     "db:migrate-custom": "drizzle-kit generate:sqlite --custom",
