--- a/apps/backend/wrangler.toml
+++ b/apps/backend/wrangler.toml
@@ -14,4 +14,4 @@ database_id = "2b19135e-ebbd-4723-8bcf-74be224781d9"
 
 
 [env.dev]
-vars = { PASSWORD_SALT = "SomeSalt" }
+vars = { PASSWORD_SALT = "$2a$10$ACtdEZ3JjyfBPL1t6Kgmtu" }
