fix(format): add semicolon

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -13,6 +13,8 @@
     "**/.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
-    "**/.client/**/*.tsx"
-, "../../packages/ui/src/elements/Button.tsx", "app/sessions.server.ts"  ]
+    "**/.client/**/*.tsx",
+    "../../packages/ui/src/elements/Button.tsx",
+    "app/sessions.server.ts"
+  ]
 }
