--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,15 +9,15 @@
     "dev": "remix vite:dev",
     "lint": "eslint .",
     "start": "wrangler pages dev",
-    "typecheck": "tsc",
+    "typecheck": "tsc --noEmit",
     "typegen": "wrangler types"
   },
   "dependencies": {
     "@conform-to/react": "^1.1.3",
     "@conform-to/zod": "^1.1.3",
-    "@mantine/core": "^7.9.1",
-    "@mantine/hooks": "^7.9.1",
-    "@mantine/nprogress": "^7.9.1",
+    "@mantine/core": "^7.10.0",
+    "@mantine/hooks": "^7.10.0",
+    "@mantine/nprogress": "^7.10.0",
     "@remix-run/cloudflare": "^2.9.2",
     "@remix-run/cloudflare-pages": "^2.9.2",
     "@remix-run/react": "^2.9.2",
@@ -25,7 +25,7 @@
     "@repo/module": "workspace:^",
     "clsx": "^2.1.1",
     "isbot": "^4.4.0",
-    "miniflare": "^3.20240419.1",
+    "miniflare": "^3.20240512.0",
     "react": "19.0.0-rc-915b914b3a-20240515",
     "react-dom": "19.0.0-rc-915b914b3a-20240515",
     "react-icons": "^5.2.1",
@@ -39,13 +39,13 @@
     "react-dom": "19.0.0-rc-915b914b3a-20240515"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240502.0",
+    "@cloudflare/workers-types": "^4.20240512.0",
     "@double-great/stylelint-a11y": "^3.0.2",
     "@remix-run/dev": "^2.9.2",
-    "@types/react": "^18.3.1",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@virtual-live-lab/eslint-config": "^2.0.1",
-    "@virtual-live-lab/stylelint-config": "^2.0.1",
+    "@virtual-live-lab/eslint-config": "^2.0.2",
+    "@virtual-live-lab/stylelint-config": "^2.0.2",
     "@virtual-live-lab/tsconfig": "^2.0.1",
     "autoprefixer": "^10.4.19",
     "babel-plugin-react-compiler": "0.0.0-experimental-c23de8d-20240515",
@@ -55,7 +55,7 @@
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
-    "stylelint": "^16.5.0",
+    "stylelint": "^16.6.0",
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-sass-guidelines": "^11.1.0",
@@ -68,6 +68,6 @@
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2",
-    "wrangler": "^3.55.0"
+    "wrangler": "^3.57.1"
   }
 }
