use Remix Single Fetch Fixes #10

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "extends": "@virtual-live-lab/tsconfig/remix",
   "compilerOptions": {
-    "types": ["@remix-run/cloudflare", "vite/client"]
+    "types": [
+      "@remix-run/cloudflare",
+      "vite/client",
+      "@remix-run/react/future/single-fetch.d.ts"
+    ]
   },
   "include": [
     "**/*.ts",
