--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,6 +18,7 @@
     "@mantine/core": "^7.11.0",
     "@mantine/hooks": "^7.11.0",
     "@mantine/nprogress": "^7.11.0",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@remix-run/cloudflare": "^2.10.0",
     "@remix-run/cloudflare-pages": "^2.10.0",
     "@remix-run/react": "^2.10.0",
@@ -29,6 +30,7 @@
     "react": "19.0.0-rc-915b914b3a-20240515",
     "react-dom": "19.0.0-rc-915b914b3a-20240515",
     "react-icons": "^5.2.1",
+    "remix-utils": "^7.6.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
     "vite-plugin-babel": "^1.2.0",
